<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context="pl.edu.pwr.mateusznowak.lab1.swim_lab1.ui.BmiCounterActivity">

    <View
        android:id="@+id/centerShim"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/button_countBmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_bmi"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText_Height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_countBmi"
        android:layout_marginBottom="22dp"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/centerShim"
        android:hint="@string/your_height_here"
        android:inputType="text|numberDecimal" />

    <TextView
        android:id="@+id/textView_Height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginEnd="8dp"
        android:layout_alignBaseline="@+id/editText_Height"
        android:layout_alignBottom="@+id/editText_Height"
        android:layout_alignEnd="@+id/centerShim" />

    <TextView
        android:id="@+id/textView_Mass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText_Height"
        android:layout_alignEnd="@+id/textView_Height"
        android:layout_marginBottom="18dp"
        android:text="@string/mass"
        android:textSize="24sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editText_Mass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/your_mass_here"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@+id/textView_Mass"
        android:layout_alignBottom="@+id/textView_Mass"
        android:layout_alignStart="@+id/editText_Height" />

    <TextView
        android:id="@+id/textView_BMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/empty_bmi"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_below="@+id/button_countBmi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />

    <TextView
        android:id="@+id/textView_BmiCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_BMI"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/empty_bmi"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold" />
</RelativeLayout>
</ScrollView>
