<resources>
    <string name="app_name">BMI Counter</string>
    <string name="mass">Mass [%1$s]:</string>
    <string name="your_mass_here">Your mass goes here</string>
    <string name="your_height_here">Your height goes here</string>
    <string name="height">Height [%1$s]:</string>
    <string name="count_bmi">Count BMI</string>
    <string name="empty_bmi">---</string>
    <string name="si_units">SI Units</string>
    <string name="imperial_units">Imperial Units</string>
    <string name="pound_lb">lb</string>
    <string name="inch_in">in</string>
    <string name="kilogram_kg">kg</string>
    <string name="meter_m">m</string>
    <string name="underweight">underweight</string>
    <string name="overweight">overweight</string>
    <string name="correct">correct</string>
    <string name="invalidate_field_message">Please fill all fields with real data.</string>
    <string name="unreal_input_message">Body like this can\'t exists! Please input real data.</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="author">Author</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="author_name">Mateusz Nowak</string>
    <string name="author_sentence">Cześć przyjacielu! \tTo właśnie ja zrobiłem ten niepowtarzalny, super nowoczesny kalkulator BMI. \tJeśli dzięki mnie uratujesz swoją sylwetkę w ramach wdzięcznośc możesz wesprzeć mnie dobrowolnym datkiem. \tMasz może do mnie pytanie (jak np. numer konta)? Nie krępuj się pisać: kontakt.mateusznowak@gmail.com</string>
    <string name="share_correct_bmi">#BMI #Ciacho #Siłka #JestMoc #WezMnie #Przystojniak Moje BMI to: %1$s Patrzcie jakie ze mnie ciacho!</string>
    <string name="share_bad_bmi">#BMI #Niegrozny #KorzystacZZycia #Meeting Moje BMI to: %1$s Nie wiadomo ile jeszcze pożyję... To może się spotkamy?</string>
</resources>
